fixing the overflow and scroll

--- a/cw6.css
+++ b/cw6.css
@@ -10,12 +10,18 @@
 }
 
 .main {
+  overflow: hidden;
+  position: relative;
   color: white;
   padding: 7.5px;
   margin: auto;
   width: 95vw;
+  min-height: 50vh;
   background-color: #2c3333;
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .days {
@@ -57,27 +63,37 @@ svg {
 .tasks {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  overflow-y: auto;
+  height: 300px;
+  margin-bottom: 60px;
 }
 
 .task {
+  width: 95%;
   background-color: #a5c9ca;
-  border: 3px solid #333;
+  border: none;
   border-radius: 10px;
   display: flex;
   color: #2c3333;
   flex-direction: row;
   justify-content: space-between;
   padding: 0 3%;
+  margin: 10px 0;
 }
 
 .add-task {
+  width: 100%;
+  left: 0;
+  bottom: 0;
   background-color: #395b64;
-  padding: 1% 5%;
-  border: 3px solid #aaa;
-  border-radius: 10px;
+  padding: 3% 3%;
+  border: none;
+  /* border-radius: 10px; */
   display: grid;
   grid-template-columns: 4fr 1fr 2fr;
   gap: 4%;
+  position: absolute;
 }
 
 .add-task input,
